# graphw00f

./: LICENSE  README.md  conf.py  main.py  pyproject.toml  queries.json  version.py
.github/workflows/: cd.yaml
docs/: agoo.md  apollo.md  ariadne.md  dgraph.md  dianajl.md  directus.md  flutter.md  gqlgen.md  graphene.md  graphql-go.md  graphql-java.md  graphql-php.md  graphql-ruby.md  graphql-yoga.md  graphqlapiforwp.md  hasura.md  hypergraphql.md  juniper.md  lighthouse.md  ruby-graphql.md  sangria.md  strawberry.md  tartiflette.md  templ.md  wpgraphql.md
graphw00f/: __init__.py  __main__.py  engines.py  helpers.py  lib.py  logger.py  main.py
graphw00f/docs/: apollo.md  templ.md
